crates/snapshot-tests/tests/snapshots/parser__bad_table_names__exclamation.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[Wanted]: expected a table key, found a character
  ┌─ exclamation:1:2
  │
1 │ [!]
  │  ^ expected a table key


error: expected a table key, found a character
 --> exclamation:1:2
  |
1 | [!]
  |  ^ expected a table key
Error {
    kind: "Wanted",
    message: "expected a table key, found a character",
    span: 1..2,
    path: None,
}
