crates/snapshot-tests/tests/snapshots/parser__bad_table_names__multi_bar.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[MultilineStringKey]: multiline strings are not allowed for key
  ┌─ multi_bar:1:2
  │
1 │ ["""bar"""]
  │  ^^^^^^^^^ multiline keys are not allowed


error: multiline strings are not allowed for key
 --> multi_bar:1:2
  |
1 | ["""bar"""]
  |  ^^^^^^^^^ multiline keys are not allowed
Error {
    kind: "MultilineStringKey",
    message: "multiline strings are not allowed for key",
    span: 1..10,
    path: None,
}
