crates/snapshot-tests/tests/snapshots/parser__bad_table_names__multi_empty.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[MultilineStringKey]: multiline strings are not allowed for key
  ┌─ multi_empty:1:2
  │
1 │ ['''''']
  │  ^^^^^^ multiline keys are not allowed


error: multiline strings are not allowed for key
 --> multi_empty:1:2
  |
1 | ['''''']
  |  ^^^^^^ multiline keys are not allowed
Error {
    kind: "MultilineStringKey",
    message: "multiline strings are not allowed for key",
    span: 1..7,
    path: None,
}
