crates/snapshot-tests/tests/snapshots/parser__bad_table_names__redefinition.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[DuplicateTable]: redefinition of table `"b"` at `a`
  ┌─ redefinition:2:1
  │  
1 │ ╭ [a.b]
2 │ │ [a."b"]
  │ │ ^^^^^^^ duplicate table
  │ ╰' first table instance


error: redefinition of table `"b"` at `a`
 --> redefinition:2:1
  |
1 | / [a.b]
2 | | [a."b"]
  | | -^^^^^^
  | | |
  | |_duplicate table
  |   first table instance
Error {
    kind: "DuplicateTable",
    message: "redefinition of table",
    span: 6..13,
    path: Some(
        "a.b",
    ),
}
